# fuel_mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLEANUP-PLAN.md  Dockerfile.gradio  Dockerfile.gradio-single  Dockerfile.old  QUICKSTART.md  README.md  README.txt  TODO_engine_v1.0.2.md  TODO_next_phase.md  app_gradio.py  app_gradio_astm.py  app_ui.py  cleanup-dry-run.sh  cleanup.sh  docker-compose-gradio.yml  docker-compose.old.yml  docker-compose.yml  docker-entrypoint.sh  install.sh  launch_gui.old.sh  pyproject.toml  requirements-gradio.txt  requirements-lock.txt  requirements.txt  start-docker.sh  sync_api_correlate.sh  uninstall.sh
docs/: CHANGELOG.md  CHANGELOG_v1.0.3.md  COMMANDS.md  DEPLOYMENT-CHECKLIST.md  DOCKER-OPTIONS.md  DOCKER-PACKAGE-README.txt  Fuel_MCP_GitRoadmap.md  Fuel_MCP_Roadmap_v1.0.3.md  Fuel_MCP_v1.0.3_Consolidated_Report.md  INSTALL-LOCAL.md  PACKAGE-SUMMARY.md  QUICKSTART.md  README-DOCKER.md  v1.0.2_closeout.md  v1.0.3_Release_Notes.md  v1.0.3_closeout.md  v1.0.3_polish_plan.md
fuel_mcp/: __init__.py  __main__.py  cli.py  core.py  tool_integration.py  tool_interface.py  unit_converter.py  vcf_official_full.py
fuel_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fuel_mcp/api/: api_correlate.py  mcp_api.py
fuel_mcp/cli/: mcp_cli.py
fuel_mcp/core/: async_logger.py  calculations.py  cli.py  conversion_dispatcher.py  conversion_engine.py  db_logger.py  dev_progress.sh  error_handler.py  fuel_density_loader.py  generate_changelog.py  mcp_core.py  rag_bridge.py  regex_parser.py  response_schema.py  setup_env.py  unit_converter.py  vcf_official_full.py
fuel_mcp/data/: conversion_history.json  mcp_history.db
fuel_mcp/flowise/: fuel_mcp_node.js
fuel_mcp/gui_astm/: app_astm_api.py  app_astm_density.py  app_astm_rel_density.py  app_astm_vol_weight.py
fuel_mcp/rag/: build_metadata.py  embed_metadata.py  enhance_metadata.py  loader.py  metadata.json  retriever.py  update_key_tables.py  update_vcf_air_tables.py  vector_store.json
fuel_mcp/tables/: auto_enrich.py  fuel_data.json  loader.py  (+7 more)
logs/: CHANGELOG_v1.0.3.md
tools/: generate_readme.py
(+87 files in other folders)
