[project]
name = "fuel_mcp"
version = "1.0.0"
description = "Local MCP module for ISO 91-1 / ASTM D1250 fuel mass–volume correction and conversion"
authors = [{ name = "Volodymyr Zub" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

# ─────────────────────────────
# 🔹 Runtime dependencies
# ─────────────────────────────
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sentence-transformers==3.0.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "orjson==3.10.7",
    "python-multipart>=0.0.20"
]

# ─────────────────────────────
# 🔹 Optional dependencies
# ─────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "httpx>=0.27.0",
]

agent = [
    "langchain==0.3.6",
    "langchain-core==0.3.15",
    "langchain-community==0.3.5",
    "openai==1.44.0"
]

# ─────────────────────────────
# 🔹 CLI entry point
# ─────────────────────────────
[project.scripts]
mcp-cli = "fuel_mcp.core.cli:main"

# ─────────────────────────────
# 🔹 Build configuration
# ─────────────────────────────
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────
# 🔹 Package inclusion/exclusion rules
# ─────────────────────────────
[tool.setuptools.packages.find]
include = ["fuel_mcp*"]
exclude = ["tests*", "examples*", "docs*"]

# ─────────────────────────────
# 🔹 Pytest configuration
# ─────────────────────────────
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Please use `import python_multipart` instead",
]
addopts = "-ra -q"